welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:38: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:48: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:58: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:29: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsDogHouse'
	override def run() {
                     ^